# openGLTexture

app/: build.gradle
app/src/androidTest/java/com/example/yllds/androidopengldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/assets/fbo/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/assets/texture/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/cpp/: CMakeLists.txt  PngPreviewController.cpp  PngPreviewController.h
app/src/main/cpp/libcommon/: AssetsReader.h
app/src/main/cpp/libpng/: CMakeLists.txt
app/src/main/cpp/librender/: CMakeLists.txt  egl_core.cpp  fbo_render.cpp  fbo_render.h  pic_preview_controller.cpp  pic_preview_controller.h  pic_preview_render.cpp  pic_preview_render.h  pic_preview_texture.cpp  pic_preview_texture.h  rgba_frame.h
app/src/main/cpp/librenderer/: egl_core.cpp  pic_preview_controller.cpp  pic_preview_controller.h  pic_preview_render.cpp  pic_preview_render.h  pic_preview_texture.cpp  pic_preview_texture.h  rgba_frame.cpp
app/src/main/java/com/example/yllds/androidopengldemo/: MainActivity.java  PngFboActivity.java  PngPreviewActivity.java  PngPreviewController.java
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/test/java/com/example/yllds/androidopengldemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
